@@ -48,17 +48,24 @@ import org.json.JSONException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.hp.hpl.jena.rdf.model.Model;
+import com.hp.hpl.jena.rdf.model.Property;
+import com.hp.hpl.jena.rdf.model.Statement;
+import com.hp.hpl.jena.rdf.model.StmtIterator;
+
 import edu.isi.karma.controller.update.UpdateContainer;
 import edu.isi.karma.kr2rml.BloomFilterKR2RMLRDFWriter;
 import edu.isi.karma.kr2rml.KR2RMLRDFWriter;
 import edu.isi.karma.kr2rml.N3KR2RMLRDFWriter;
 import edu.isi.karma.kr2rml.URIFormatter;
 import edu.isi.karma.kr2rml.mapping.R2RMLMappingIdentifier;
+import edu.isi.karma.kr2rml.mapping.WorksheetR2RMLJenaModelParser;
 import edu.isi.karma.metadata.KarmaMetadataManager;
 import edu.isi.karma.metadata.PythonTransformationMetadata;
 import edu.isi.karma.metadata.UserConfigMetadata;
 import edu.isi.karma.metadata.UserPreferencesMetadata;
 import edu.isi.karma.modeling.ModelingConfiguration;
+import edu.isi.karma.modeling.Uris;
 import edu.isi.karma.modeling.semantictypes.SemanticTypeUtil;
 import edu.isi.karma.rdf.GenericRDFGenerator.InputType;
 import edu.isi.karma.util.DBType;
@@ -67,7 +74,7 @@ import edu.isi.karma.webserver.KarmaException;
 
 public class OfflineRdfGenerator {
 
-    private static Logger logger = LoggerFactory.getLogger(OfflineRdfGenerator.class);
+	private static Logger logger = LoggerFactory.getLogger(OfflineRdfGenerator.class);
 	private String inputType;
 	private String modelFilePath;
 	private String modelURLString;
@@ -92,48 +99,48 @@ public class OfflineRdfGenerator {
 	private DBType dbType;
 	private File inputFile;
 	private int maxNumLines; 
-    public OfflineRdfGenerator(CommandLine cl)
-    {
-    	
-    	this.writers = new LinkedList<KR2RMLRDFWriter>();
-    	parseCommandLineOptions(cl);	
-    }
+	public OfflineRdfGenerator(CommandLine cl)
+	{
 
-    public static void main(String[] args) {
-    	
-    	Group options = createCommandLineOptions();
-        Parser parser = new Parser();
-        parser.setGroup(options);
+		this.writers = new LinkedList<KR2RMLRDFWriter>();
+		parseCommandLineOptions(cl);	
+	}
 
-        // configure a HelpFormatter
-        HelpFormatter hf = new HelpFormatter();
+	public static void main(String[] args) {
 
-        // configure a parser
-        Parser p = new Parser();
-        p.setGroup(options);
-        p.setHelpFormatter(hf);
-        p.setHelpTrigger("--help");
+		Group options = createCommandLineOptions();
+		Parser parser = new Parser();
+		parser.setGroup(options);
 
-        try {
-            /**
-             * PARSE THE COMMAND LINE ARGUMENTS *
-             */
-            CommandLine cl = parser.parseAndHelp(args);
-            if (cl == null || cl.getOptions().size() == 0 || cl.hasOption("--help")) {
-                hf.setGroup(options);
-                hf.print();
-                return;
-            }
+		// configure a HelpFormatter
+		HelpFormatter hf = new HelpFormatter();
 
-            OfflineRdfGenerator generator = new OfflineRdfGenerator(cl);
-          
-            generator.generate();
+		// configure a parser
+		Parser p = new Parser();
+		p.setGroup(options);
+		p.setHelpFormatter(hf);
+		p.setHelpTrigger("--help");
+
+		try {
+			/**
+			 * PARSE THE COMMAND LINE ARGUMENTS *
+			 */
+			CommandLine cl = parser.parseAndHelp(args);
+			if (cl == null || cl.getOptions().size() == 0 || cl.hasOption("--help")) {
+				hf.setGroup(options);
+				hf.print();
+				return;
+			}
+
+			OfflineRdfGenerator generator = new OfflineRdfGenerator(cl);
+
+			generator.generate();
 
 
-        } catch (Exception e) {
-            logger.error("Error occured while generating RDF!", e);
-        }
-    }
+		} catch (Exception e) {
+			logger.error("Error occured while generating RDF!", e);
+		}
+	}
 
 	private void generate() throws Exception {
 		if (validateCommandLineOptions()) {
@@ -143,25 +150,25 @@ public class OfflineRdfGenerator {
 			closeWriters();
 		}
 	}
-    
-    private void generateRDF() throws Exception
-    {
-        /**
-         * Generate RDF on the source type *
-         */
-        long l = System.currentTimeMillis();
 
-        // Database table
-        if (inputType.equals("DB") || inputType.equals("SQL")) {
-            generateRdfFromDatabaseTable();
-        } // File based worksheets such as JSON, XML, CSV
-        else {
-            generateRdfFromFile();
-        }
+	private void generateRDF() throws Exception
+	{
+		/**
+		 * Generate RDF on the source type *
+		 */
+		long l = System.currentTimeMillis();
 
-        logger.info("done after {}", (System.currentTimeMillis() - l));
-        logger.info("RDF published at: " + outputFilePath);
-    }
+		// Database table
+		if (inputType.equals("DB") || inputType.equals("SQL")) {
+			generateRdfFromDatabaseTable();
+		} // File based worksheets such as JSON, XML, CSV
+		else {
+			generateRdfFromFile();
+		}
+
+		logger.info("done after {}", (System.currentTimeMillis() - l));
+		logger.info("RDF published at: " + outputFilePath);
+	}
 
 	private void setupKarmaMetadata() throws KarmaException {
 		UpdateContainer uc = new UpdateContainer();
@@ -170,9 +177,9 @@ public class OfflineRdfGenerator {
 		userMetadataManager.register(new UserConfigMetadata(), uc);
 		userMetadataManager.register(new PythonTransformationMetadata(), uc);
 
-        SemanticTypeUtil.setSemanticTypeTrainingStatus(false);
-        ModelingConfiguration.setLearnerEnabled(false); // disable automatic learning
-    	
+		SemanticTypeUtil.setSemanticTypeTrainingStatus(false);
+		ModelingConfiguration.setLearnerEnabled(false); // disable automatic learning
+
 	}
 
 
@@ -187,7 +194,7 @@ public class OfflineRdfGenerator {
 		parseFileCommandLineOptions(cl);
 
 	}
-	
+
 	protected void parseDatabaseCommandLineOptions(CommandLine cl)
 	{
 
@@ -201,7 +208,7 @@ public class OfflineRdfGenerator {
 		queryFile = (String) cl.getValue("--queryfile");
 		portnumber = (String) cl.getValue("--portnumber");
 	}
-	
+
 	protected void parseFileCommandLineOptions(CommandLine cl)
 	{
 
@@ -209,44 +216,44 @@ public class OfflineRdfGenerator {
 		sMaxNumLines = (String) cl.getValue("--maxNumLines");
 		sourceName = (String) cl.getValue("--sourcename");
 	}
-    protected boolean validateCommandLineOptions() throws IOException
-    {
+	protected boolean validateCommandLineOptions() throws IOException
+	{
 
-          if ((modelURLString == null && modelFilePath == null) || outputFilePath == null || inputType == null) {
-              logger.error("Mandatory value missing. Please provide argument value "
-                      + "for sourcetype, modelfilepath and outputfile.");
-              return false;
-          }
-          
-          if (!inputType.equalsIgnoreCase("DB")
-                  && !inputType.equalsIgnoreCase("CSV")
-                  && !inputType.equalsIgnoreCase("XML")
-                  && !inputType.equalsIgnoreCase("JSON")
-                  && !inputType.equalsIgnoreCase("SQL")
-                  ) {
-              logger.error("Invalid source type: " + inputType
-                      + ". Please choose from: DB, SQL, CSV, XML, JSON.");
-              return false;
-          }
-          return true;
-    }
+		if ((modelURLString == null && modelFilePath == null) || outputFilePath == null || inputType == null) {
+			logger.error("Mandatory value missing. Please provide argument value "
+					+ "for sourcetype, modelfilepath and outputfile.");
+			return false;
+		}
+
+		if (!inputType.equalsIgnoreCase("DB")
+				&& !inputType.equalsIgnoreCase("CSV")
+				&& !inputType.equalsIgnoreCase("XML")
+				&& !inputType.equalsIgnoreCase("JSON")
+				&& !inputType.equalsIgnoreCase("SQL")
+				) {
+			logger.error("Invalid source type: " + inputType
+					+ ". Please choose from: DB, SQL, CSV, XML, JSON.");
+			return false;
+		}
+		return true;
+	}
 
 
 	private boolean validateFileCommandLineOptions() {
 		inputFile = new File(sourceFilePath);
 		if (!inputFile.exists()) {
-		    logger.error("File not found: " + inputFile.getAbsolutePath());
-		    return false;
+			logger.error("File not found: " + inputFile.getAbsolutePath());
+			return false;
 		}
 		if(encoding == null) {
 			encoding = EncodingDetector.detect(inputFile);
 		}
-		
+
 		maxNumLines = -1;
 		if(sMaxNumLines != null) {
 			maxNumLines = Integer.parseInt(sMaxNumLines);
 		}
-		
+
 		if(sourceName == null)
 		{
 			logger.error("You need to supply a value for '--sourcename'");
@@ -254,35 +261,47 @@ public class OfflineRdfGenerator {
 		}
 		return true;
 	}
-	
+
 	private void createModelURL() throws IOException {
 		/**
-           * VALIDATE THE OPTIONS *
-           */
-          if(modelFilePath != null)
-          {
-          	File modelFile = new File(modelFilePath);
-          	if (!modelFile.exists()) {
-          		throw new IOException("File not found: " + modelFile.getAbsolutePath());
-          	}
-          	modelURL = modelFile.toURI().toURL();
-          }
-          else
-          {
-          	modelURL = new URL(modelURLString);
-          }
+		 * VALIDATE THE OPTIONS *
+		 */
+		if(modelFilePath != null)
+		{
+			File modelFile = new File(modelFilePath);
+			if (!modelFile.exists()) {
+				throw new IOException("File not found: " + modelFile.getAbsolutePath());
+			}
+			modelURL = modelFile.toURI().toURL();
+		}
+		else
+		{
+			modelURL = new URL(modelURLString);
+		}
+		try {
+			Model model = WorksheetR2RMLJenaModelParser.loadSourceModelIntoJenaModel(modelURL);
+			StmtIterator itr = model.listStatements();
+			Property p = model.getProperty(Uris.KM_HAS_BASEURI);
+			while(itr.hasNext()) {
+				Statement stmt = itr.next();
+				if (stmt.getPredicate().hasProperty(p))
+					baseURI = stmt.getObject().toString();
+			}
+		} catch (IOException e) {
+
+		}
 	}
 
 	private void generateRdfFromDatabaseTable() throws IOException, JSONException, KarmaException,
-			SQLException, ClassNotFoundException {
+	SQLException, ClassNotFoundException {
 		if(!validateDatabaseCommandLineOptions())
 		{
 			logger.error("Unable to generate RDF from database table!");
 			return;
 		}
-		
+
 		DatabaseTableRDFGenerator dbRdfGen = new DatabaseTableRDFGenerator(dbType,
-		        hostname, port, username, password, dBorSIDName, encoding);
+				hostname, port, username, password, dBorSIDName, encoding);
 		if(inputType.equals("DB")) {
 			R2RMLMappingIdentifier id = new R2RMLMappingIdentifier(tablename, modelURL);
 			createWriters(id);
@@ -293,7 +312,7 @@ public class OfflineRdfGenerator {
 			createWriters(id);
 			dbRdfGen.generateRDFFromSQL(query, writers, id, baseURI);
 		}
-		
+
 
 	}
 
@@ -304,35 +323,35 @@ public class OfflineRdfGenerator {
 		try {
 			port = Integer.parseInt(portnumber);
 		} catch (Throwable t) {
-		    logger.error("Error occured while parsing value for portnumber."
-		            + " Provided value: " + portnumber);
-		    return false;
+			logger.error("Error occured while parsing value for portnumber."
+					+ " Provided value: " + portnumber);
+			return false;
 		}
-		
+
 		// Validate the arguments
 		if (dbtypeStr == null || dbtypeStr.equals("") || hostname == null
-		        || hostname.equals("") || username == null || username.equals("")
-		        || password == null || password.equals("") || dBorSIDName == null
-		        || dBorSIDName.equals("") 
-		        || (inputType.equals("DB") && (tablename == null || tablename.equals("")))
-		        || (inputType.equals("SQL") && (queryFile == null || queryFile.equals("")))
-		        ) {
+				|| hostname.equals("") || username == null || username.equals("")
+				|| password == null || password.equals("") || dBorSIDName == null
+				|| dBorSIDName.equals("") 
+				|| (inputType.equals("DB") && (tablename == null || tablename.equals("")))
+				|| (inputType.equals("SQL") && (queryFile == null || queryFile.equals("")))
+				) {
 			if(inputType.equals("DB"))
 				logger.error("A mandatory value is missing for fetching data from "
-		            + "a database. Please provide argument values for dbtype, hostname, "
-		            + "username, password, portnumber, dbname and tablename.");
+						+ "a database. Please provide argument values for dbtype, hostname, "
+						+ "username, password, portnumber, dbname and tablename.");
 			else
 				logger.error("A mandatory value is missing for fetching data from "
-			            + "a database. Please provide argument values for dbtype, hostname, "
-			            + "username, password, portnumber, dbname and queryfile.");
-		    return false;
+						+ "a database. Please provide argument values for dbtype, hostname, "
+						+ "username, password, portnumber, dbname and queryfile.");
+			return false;
 		}
 
 		dbType = DBType.valueOf(dbtypeStr);
 		if (dbType == null) {
-		    logger.error("Unidentified database type. Valid values: "
-		            + "Oracle, MySQL, SQLServer, PostGIS");
-		    return false;
+			logger.error("Unidentified database type. Valid values: "
+					+ "Oracle, MySQL, SQLServer, PostGIS");
+			return false;
 		}
 		return true;
 	}
@@ -346,16 +365,16 @@ public class OfflineRdfGenerator {
 
 	protected void closeWriters() {
 		for(KR2RMLRDFWriter writer : writers)
-        {
-        	writer.flush();
-        	writer.close();
-        }
+		{
+			writer.flush();
+			writer.close();
+		}
 	}
-	
+
 	protected void createWriters(R2RMLMappingIdentifier id) throws IOException
 	{
-        createN3Writer();
-        createBloomFilterWriter(id);
+		createN3Writer();
+		createBloomFilterWriter(id);
 	}
 	protected void createN3Writer()
 			throws UnsupportedEncodingException, FileNotFoundException {
@@ -383,7 +402,7 @@ public class OfflineRdfGenerator {
 				writers.add(bloomfilter);
 			}
 		}
-		
+
 	}
 
 	private void generateRdfFromFile()
@@ -395,7 +414,7 @@ public class OfflineRdfGenerator {
 			return;
 		}
 		R2RMLMappingIdentifier id = new R2RMLMappingIdentifier(sourceName, modelURL);
-		
+
 
 		createWriters(id);
 		GenericRDFGenerator rdfGenerator = new GenericRDFGenerator();
@@ -408,54 +427,54 @@ public class OfflineRdfGenerator {
 		else if(this.inputType.equalsIgnoreCase("XML"))
 			inputType = InputType.XML;
 		rdfGenerator.generateRDF(sourceName, inputFile, inputType, maxNumLines, false, writers);
-		
+
 	}
 
 
-    private static Group createCommandLineOptions() {
-        DefaultOptionBuilder obuilder = new DefaultOptionBuilder();
-        ArgumentBuilder abuilder = new ArgumentBuilder();
-        GroupBuilder gbuilder = new GroupBuilder();
+	private static Group createCommandLineOptions() {
+		DefaultOptionBuilder obuilder = new DefaultOptionBuilder();
+		ArgumentBuilder abuilder = new ArgumentBuilder();
+		GroupBuilder gbuilder = new GroupBuilder();
 
-        Group options =
-                gbuilder
-                .withName("options")
-                .withOption(buildOption("sourcetype", "type of source. Valid values: DB, SQL, CSV, JSON, XML", "sourcetype", obuilder, abuilder))
-                .withOption(buildOption("filepath", "location of the input file", "filepath", obuilder, abuilder))
-                .withOption(buildOption("modelfilepath", "location of the model file", "modelfilepath", obuilder, abuilder))
-                .withOption(buildOption("modelurl", "location of the model", "modelurl", obuilder, abuilder))
-                .withOption(buildOption("sourcename", "name of the source in the model to use", "sourcename", obuilder, abuilder))
-                .withOption(buildOption("outputfile", "location of the output file", "outputfile", obuilder, abuilder))
-                .withOption(buildOption("dbtype", "database type. Valid values: Oracle, MySQL, SQLServer, PostGIS", "dbtype", obuilder, abuilder))
-                .withOption(buildOption("hostname", "hostname for database connection", "hostname", obuilder, abuilder))
-                .withOption(buildOption("username", "username for database connection", "username", obuilder, abuilder))
-                .withOption(buildOption("password", "password for database connection", "password", obuilder, abuilder))
-                .withOption(buildOption("portnumber", "portnumber for database connection", "portnumber", obuilder, abuilder))
-                .withOption(buildOption("dbname", "database or SID name for database connection", "dbname", obuilder, abuilder))
-                .withOption(buildOption("tablename", "hostname for database connection", "tablename", obuilder, abuilder))
-                .withOption(buildOption("queryfile", "query file for loading data", "queryfile", obuilder, abuilder))
-                .withOption(buildOption("outputbloomfilter", "generate bloom filters", "bloomfiltersfile", obuilder, abuilder))
-                .withOption(buildOption("baseuri", "specifies base uri", "base URI", obuilder, abuilder))
-                .withOption(obuilder
-                .withLongName("help")
-                .withDescription("print this message")
-                .create())
-                .create();
+		Group options =
+				gbuilder
+				.withName("options")
+				.withOption(buildOption("sourcetype", "type of source. Valid values: DB, SQL, CSV, JSON, XML", "sourcetype", obuilder, abuilder))
+				.withOption(buildOption("filepath", "location of the input file", "filepath", obuilder, abuilder))
+				.withOption(buildOption("modelfilepath", "location of the model file", "modelfilepath", obuilder, abuilder))
+				.withOption(buildOption("modelurl", "location of the model", "modelurl", obuilder, abuilder))
+				.withOption(buildOption("sourcename", "name of the source in the model to use", "sourcename", obuilder, abuilder))
+				.withOption(buildOption("outputfile", "location of the output file", "outputfile", obuilder, abuilder))
+				.withOption(buildOption("dbtype", "database type. Valid values: Oracle, MySQL, SQLServer, PostGIS", "dbtype", obuilder, abuilder))
+				.withOption(buildOption("hostname", "hostname for database connection", "hostname", obuilder, abuilder))
+				.withOption(buildOption("username", "username for database connection", "username", obuilder, abuilder))
+				.withOption(buildOption("password", "password for database connection", "password", obuilder, abuilder))
+				.withOption(buildOption("portnumber", "portnumber for database connection", "portnumber", obuilder, abuilder))
+				.withOption(buildOption("dbname", "database or SID name for database connection", "dbname", obuilder, abuilder))
+				.withOption(buildOption("tablename", "hostname for database connection", "tablename", obuilder, abuilder))
+				.withOption(buildOption("queryfile", "query file for loading data", "queryfile", obuilder, abuilder))
+				.withOption(buildOption("outputbloomfilter", "generate bloom filters", "bloomfiltersfile", obuilder, abuilder))
+				.withOption(buildOption("baseuri", "specifies base uri", "base URI", obuilder, abuilder))
+				.withOption(obuilder
+						.withLongName("help")
+						.withDescription("print this message")
+						.create())
+						.create();
 
-        return options;
-    }
+		return options;
+	}
 
-    public static Option buildOption(String shortName, String description, String argumentName,
-            DefaultOptionBuilder obuilder, ArgumentBuilder abuilder) {
-        return obuilder
-                .withLongName(shortName)
-                .withDescription(description)
-                .withArgument(
-                abuilder
-                .withName(argumentName)
-                .withMinimum(1)
-                .withMaximum(1)
-                .create())
-                .create();
-    }
+	public static Option buildOption(String shortName, String description, String argumentName,
+			DefaultOptionBuilder obuilder, ArgumentBuilder abuilder) {
+		return obuilder
+				.withLongName(shortName)
+				.withDescription(description)
+				.withArgument(
+						abuilder
+						.withName(argumentName)
+						.withMinimum(1)
+						.withMaximum(1)
+						.create())
+						.create();
+	}
 }
